@@ -1,14 +1,16 @@
-package eu.venthe.pipeline.orchestrator.projects.domain.workflows.contexts.on;
+package eu.venthe.pipeline.orchestrator.projects.domain.workflows.contexts.on.matchers.on;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import eu.venthe.pipeline.orchestrator.projects.domain.utilities.GlobPatternMatching;
+import eu.venthe.pipeline.orchestrator.projects.domain.workflows.contexts.on.matchers.OnMatcher;
 import eu.venthe.pipeline.orchestrator.shared_kernel.version_control_events.contexts.utilities.ContextUtilities;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -19,10 +21,10 @@ public class AbstractOnPropertyAndIgnoredProperty {
     protected final List<String> patterns;
     protected final List<String> patternsIgnore;
 
-    public AbstractOnPropertyAndIgnoredProperty(ObjectNode root, String patternsKey, String patternsIgnoreKey) {
-        if (!root.isObject()) throw new IllegalArgumentException();
+    public AbstractOnPropertyAndIgnoredProperty(JsonNode _root, String patternsKey, String patternsIgnoreKey) {
+        if (!_root.isObject()) throw new IllegalArgumentException();
 
-        this.root = root;
+        this.root = (ObjectNode) _root;
         this.patterns = getList(patternsKey);
         this.patternsIgnore = getList(patternsIgnoreKey);
     }
@@ -34,7 +36,7 @@ public class AbstractOnPropertyAndIgnoredProperty {
                         .filter(JsonNode::isTextual)
                         .map(JsonNode::asText)
                         .filter(Predicate.not(String::isBlank))
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     public boolean match(String property) {
